src/objects/testInCountry1__Object_relationship__c.object
<CustomObject>
    <fields>
        <fullName>testInCountry1__Behavior__c</fullName>
        <label>Behaviour</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>redaction</fullName>
                </value>
                <value>
                    <fullName>restriction</fullName>
                </value>
                <value>
                    <fullName>replication</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>testInCountry1__CountryFieldValue__c</fullName>
        <label>Source Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testInCountry1__Country__c</fullName>
        <description>InCountryRestApiEndpoint___mdt.Country__c field must have the same values</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>none</fullName>
                </value>
                <value>
                    <fullName>ad</fullName>
                </value>
                <value>
                    <fullName>ae</fullName>
                </value>
                <value>
                    <fullName>af</fullName>
                </value>
                <value>
                    <fullName>ag</fullName>
                </value>
                <value>
                    <fullName>ai</fullName>
                </value>
                <value>
                    <fullName>al</fullName>
                </value>
                <value>
                    <fullName>am</fullName>
                </value>
                <value>
                    <fullName>ao</fullName>
                </value>
                <value>
                    <fullName>aq</fullName>
                </value>
                <value>
                    <fullName>ar</fullName>
                </value>
                <value>
                    <fullName>as</fullName>
                </value>
                <value>
                    <fullName>at</fullName>
                </value>
                <value>
                    <fullName>au</fullName>
                </value>
                <value>
                    <fullName>aw</fullName>
                </value>
                <value>
                    <fullName>ax</fullName>
                </value>
                <value>
                    <fullName>az</fullName>
                </value>
                <value>
                    <fullName>ba</fullName>
                </value>
                <value>
                    <fullName>bb</fullName>
                </value>
                <value>
                    <fullName>bd</fullName>
                </value>
                <value>
                    <fullName>be</fullName>
                </value>
                <value>
                    <fullName>bf</fullName>
                </value>
                <value>
                    <fullName>bg</fullName>
                </value>
                <value>
                    <fullName>bh</fullName>
                </value>
                <value>
                    <fullName>bi</fullName>
                </value>
                <value>
                    <fullName>bj</fullName>
                </value>
                <value>
                    <fullName>bl</fullName>
                </value>
                <value>
                    <fullName>bm</fullName>
                </value>
                <value>
                    <fullName>bn</fullName>
                </value>
                <value>
                    <fullName>bo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>testInCountry1__Country_field__c</fullName>
        <defaultValue>&quot;Country_field__c&quot;</defaultValue>
        <label>Source Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testInCountry1__InCountryStateField__c</fullName>
        <label>InCountryStateField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testInCountry1__Object_name__c</fullName>
        <label>Object name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testInCountry1__Precedence__c</fullName>
        <label>Precedence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>testInCountry1__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>object</fullName>
                </value>
                <value>
                    <fullName>record</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Object relationship</label>
    <listViews>
        <fullName>testInCountry1__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>testInCountry1__Full</fullName>
        <columns>testInCountry1__Object_name__c</columns>
        <columns>testInCountry1__Type__c</columns>
        <columns>testInCountry1__Country__c</columns>
        <columns>testInCountry1__Country_field__c</columns>
        <filterScope>Mine</filterScope>
        <label>Full</label>
    </listViews>
    <nameField>
        <label>Object relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Objects relationship</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>testInCountry1__Require_Object_Name</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISPICKVAL(testInCountry1__Type__c, &quot;record&quot;), ISPICKVAL(testInCountry1__Type__c, &quot;object&quot;)) &amp;&amp; ISBLANK(testInCountry1__Object_name__c)</errorConditionFormula>
        <errorMessage>Add Object Name for Type equal to &apos;record&apos; or &apos;object&apos;</errorMessage>
    </validationRules>
</CustomObject>